--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <!-- Logo UPDATED -->
       <div class="logo">
-        <img src="images/logo.png" alt="School logo">
+        <img src="images/logo.jpg" alt="School logo">
         <div class="logo-text">
           NEHRU
           <span>MATRICULATION HIGHER SECONDARY SCHOOL</span>
@@ -196,3 +196,4 @@
 
 </body>
 </html>
+
