--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         Alumni are well-placed globally as Doctors, Engineers, Lawyers, and Software Professionals.
       </p>
       <div class="academics-img-wrap" style="display: flex; justify-content: center;">
-        <img src="images/img71.png" alt="Academics Image" style="max-width: 100%; height: auto;">
+        <img src="images/img71.jpg" alt="Academics Image" style="max-width: 100%; height: auto;">
       </div>
     </div>
   </section>
@@ -196,4 +196,5 @@
 
 </body>
 </html>
+
 
