--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Nehru Matriculation Higher Secondary School — Replica</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -165,6 +166,28 @@
       </p>
     </div>
   </section>
+<footer class="footer">
+  <h2>Follow Us On</h2>
+
+  <div class="social-icons">
+    <a href="https://www.instagram.com/_nehru_school_?igsh=eTc5Y3V5eWxtcWhr" target="_blank">
+      <i class="fa-brands fa-instagram"></i>
+    </a>
+
+    <a href="https://www.facebook.com/share/17Q9B4QEZz/" target="_blank">
+      <i class="fa-brands fa-facebook"></i>
+    </a>
+
+    <a href="https://youtube.com/@nehruschool-19?si=gSbS0caJ54KLn_j8" target="_blank">
+      <i class="fa-brands fa-youtube"></i>
+    </a>
+
+    <a href="https://wa.me/" target="_blank">
+      <i class="fa-brands fa-whatsapp"></i>
+    </a>
+  </div>
+</footer>
+
 
   <footer class="site-footer">
     <div class="container">
@@ -196,5 +219,3 @@
 
 </body>
 </html>
-
-
