--- a/index.html
+++ b/index.html
@@ -186,14 +186,11 @@
       <i class="fa-brands fa-whatsapp"></i>
     </a>
   </div>
+
+  <p class="copyright">
+    © 2025 Nehru Matriculation Hr. Sec. School — All rights reserved
+  </p>
 </footer>
-
-
-  <footer class="site-footer">
-    <div class="container">
-      <small>© 2025 Nehru Matriculation Hr. Sec. School — All rights reserved</small>
-    </div>
-  </footer>
 
   <script>
     const btn = document.getElementById('navToggle');
@@ -219,3 +216,4 @@
 
 </body>
 </html>
+
